--- a/users.html
+++ b/users.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Front Page</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-        crossorigin="anonymous">
+    <title>Users</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
 </head>
+
 <body>
     <div class="container-fluid" id="gradient">
         <div class="row">
@@ -29,19 +28,28 @@
             </nav>
         </div>
         <div>
-            <!-- <button type="button" class="btn btn-success" id="new-post">New Post</button>
-        </div> -->
-        <!-- <div class="row">
-            <div class="col-lg-10" style="margin: 0 auto" id="post-form">
-                <form class="form-group col-lg-6 col-md-6 form2">
-                    <input type="text" placeholder="Title" class="form-control" id="title">
-                    <input type="text" placeholder="UserName" class="form-control" id="userId">
-                    <textarea id="body" class="form-control" style="resize: none"></textarea>
-                    <button type="button" class="btn btn-info mt-2 mr-1" id="postButton">Post</button>
-                    <button type="reset" class="btn btn-reset mt-2" id="clear">Clear</button>
+            <button type="button" class="btn btn-success" id="new-post">New User</button>
+        </div>
+        <div class="row">
+            <div class="col-lg-10" style="margin: 0 auto">
+                <form class="col-lg-6 col-md-6 form22">
+                    <input type="text" placeholder="Your Name" class="form-control" name="name">
+                    <input type="email" placeholder="Your Email" class="form-control" name="email">
+                    <input type="text" placeholder=" Your User Name" class="form-control" name="id">
+                    <button type="button" class="btn btn-info mt-2 mr-1" id="createUser">Create</button>
+                    <button type="reset" class="btn btn-reset mt-2" id="clear clear1">Clear</button>
+
                 </form>
             </div>
-        </div> -->
+        </div>
+        <table class="table col-lg-12">
+            <thead>
+                <th class="white">Id</th>
+                <th>Name</th>
+                <th>UserName</th>
+                <th>Actions</th>
+            </thead>
+        </table>
         <div class="col-lg-12 col-sm-12" id="flex1">
             <h1 id="flex">Background Generator</h1>
             <form class="form-group col-lg-1 col-md-5" id="flex1">
@@ -49,21 +57,18 @@
                 <input class="color2 form-control glow" type="color" name="color2" value="#ff0000">
             </form>
         </div>
-
-        <thead>
-            
-        </thead>
-        <tbody id="tableBody"></tbody>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script type="module" src="user.js"></script>
+    
 </body>
+
 </html>
